# teste-tecnico-ize

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bronze/: rastreamento.csv
gold/: etl_silver_to_gold.ipynb
silver/: etl_bronze_to_silver.ipynb  rastreamento_tratado.csv
